[project]
name = "graphmemory"
version = "0.1.0"
description = "Graph-based memory system using DuckDB"
requires-python = ">=3.10"
dependencies = [
    "duckdb==1.0.0",
    "pydantic==2.7.3",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["graphmemory"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
