[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphmemory"
version = "1.1.1"
description = "Graph-based memory system using DuckDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "bradAGI" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "duckdb>=1.5.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
algorithms = ["networkx>=3.6", "scipy>=1.14"]
extraction = ["dspy>=3.1"]

[project.urls]
Homepage = "https://github.com/bradAGI/GraphMemory"
Repository = "https://github.com/bradAGI/GraphMemory"
Issues = "https://github.com/bradAGI/GraphMemory/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["graphmemory"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
